[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tcannex"
version = "0.1.0"
description = "Python driver for the TCAnnex CPRT API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Seemless", email = "info@seemless.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
"Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.urls]
Homepage = "https://github.com/seemless/tcannex-driver"
Repository = "https://github.com/seemless/tcannex-driver"

[tool.setuptools.packages.find]
where = ["src"]
